PHP 4                                                                      NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 200?, Version 4.2.0-dev
- added mb_get_info() to get internal settings of mbstring.
- Added async query functions to PostgreSQL module (Yasuo)
- Added pg_copy_to()/pg_copy_from() for PostgreSQL module (Youichi, Yasuo)
- Added IPv6 support in FTP extension. (Stig Venaas)
- Added CLI (command line intrerface) sapi based on a cut-down version
  of the CGI sapi which is more suited for writing shell scripts. Some of
  the differences are: it prints no HTTP headers, displays plain text
  error messages, etc. (Edin)
- Made wordwrap() significantly faster. (Jim)
- Fixed pow(), and added is_finite(), is_infinite(), and is_nan(). (Jim)
- Fixed segfault in wordwrap() when wrapping to zero width and using
  multi-character break or trying to force cut (bug #12768). (Jim)
- Fixed several bugs in dbase extension (dbase_pack() truncate file to right
  size, fix 6852 #1 and 6852 #2). (Vlad)
- Fix bug in krsort() where an extra character was being compared (Andi)
- fixed bug that made pspell include pspell.h from a wrong location. (Vlad)
- added function overload in mbstring to add multibyte support for 
  string and mail functions. (Rui)
- Added flags parameter to preg_grep(). The only flag currently is
  PREG_GREP_INVERT that will make the function return entries that
  did not match. (Andrei)
- Fixed several crash bugs in the xslt extension (Markus, Derick)
- Fixed problem with dbase not returning very large (larger than long)
- integers properly. (Vlad)
- Added concepts to IRCG: bailout-on-trivial issue, write output to
  files, fetch a ressource upon connection end. (Sascha)
- Fixed POST-related bugs in thttpd, added QUERY_STRING, HTTP_HOST,
  HTTP_ACCEPT_LANGUAGE to the script environment, improved patch
  to send correct MIME types, and added support for /nocache/. (Sascha)